k8s/namespaces/artifactory/patches/mgmt-sandbox/cluster-00/artifactory.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory-oss
  namespace: artifactory
spec:
  template:
    spec:
