k8s/namespaces/artifactory/patches/mgmt-sandbox/cluster-00/ingress.yaml
---
#
# Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: artifactory-oss
  namespace: artifactory
spec:
  rules:
    - host: sandbox-artifactory.platform.hmcts.net
      http:
        paths:
          - path: /
            backend:
              serviceName: artifactory-oss
              servicePort: 80
